--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: java
-jdk:
-  - oraclejdk8
 matrix:
   include:
     - os: linux
@@ -16,6 +14,11 @@ before_install:
       curl https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/7-2018q2/gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2 -o gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2
       tar xfj gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2 -C ~/
       rm gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2
+      ls ~/gcc-arm-none-eabi-7-2018-q2-update/bin
+      curl https://d3pxv6yz143wms.cloudfront.net/8.232.09.1/java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb > java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
+      dpkg -i java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
+      export JAVA_HOME="/usr/lib/jvm/java-1.8.0-amazon-corretto"
+      rm java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
       env PATH="$PATH:~/gcc-arm-none-eabi-7-2018-q2-update/bin" ./platform_linux/build.sh --noninteractive
       ;;
     osx)
