--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,12 @@ before_install:
       sudo apt-get update -qq
       sudo apt-get install -qq fakeroot
       curl https://armkeil.blob.core.windows.net/developer/Files/downloads/gnu-rm/7-2018q2/gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2 -o gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2
-      tar xfj gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2 -C ~/
+      tar xfj gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2 -C platform_linux/
       rm gcc-arm-none-eabi-7-2018-q2-update-linux.tar.bz2
-      ls ~/gcc-arm-none-eabi-7-2018-q2-update/bin
       curl https://d3pxv6yz143wms.cloudfront.net/8.232.09.1/java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb > java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
       sudo dpkg -i java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
       rm java-1.8.0-amazon-corretto-jdk_8.232.09-1_amd64.deb
       export JAVA_HOME="/usr/lib/jvm/java-1.8.0-amazon-corretto"
-      export PATH="$PATH:~/gcc-arm-none-eabi-7-2018-q2-update/bin"
       ./platform_linux/build.sh --noninteractive
       ;;
     osx)
